@@ -1,4 +1,13 @@
-Wed May 16 02:40:00 2001  Steve Huston  <Michael.Kircher@mchp.siemens.de>
+Wed May 16 09:49:29 2001  Steve Huston  <shuston@riverace.com>
+
+        * ace/ACE.cpp (handle_timed_complete): On Win32, interpret exception
+          handle bit set as failure, regardless of what getsockopt says about
+          an error. NT always reports 0 for error.
+
+        * tests/SOCK_Connector_Test.cpp: Changed some LM_DEBUG to LM_ERROR and
+          LM_WARNING to more easily interpret the log file.
+
+Wed May 16 02:40:00 2001  Michael Kircher  <Michael.Kircher@mchp.siemens.de>
 
         * include/makeinclude/platform_vxworks5.x_g++.GNU:
 
